[package]
name = "ssht"
version = "0.1.0"
edition = "2024"
authors = ["Ayaan Hafeez"]
description = "A smart SSH session manager that auto-attaches to persistent tmux sessions"
license = "MIT"
readme = "README.md"
repository = "https://github.com/mayaanhafeez/ssht"
keywords = ["ssh", "tmux", "tui", "cli", "sessions"]
categories = ["command-line-utilities"]

[dependencies]
age = "0.11"
anyhow = "1.0.102"
chrono = "0.4.45"
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
dirs = "6.0.0"
nucleo-matcher = "0.3.1"
ratatui = "0.30.2"
rpassword = "7"
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
shellexpand = "3.1.2"
tempfile = "3"
tokio = { version = "1.52.3", features = ["full"] }
toml = "1.1.2"
