[package]
name = "ssht"
version = "0.1.1"
edition = "2024"
authors = ["Ayaan Hafeez"]
description = "A smart SSH session manager that auto-attaches to persistent tmux sessions"
license = "MIT"
readme = "README.md"
repository = "https://github.com/mayaanhafeez/ssht"
keywords = ["ssh", "tmux", "tui", "cli", "sessions"]
categories = ["command-line-utilities"]

[dependencies]
age = "0.11"
anyhow = "1.0.102"
chrono = "0.4.45"
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
dirs = "6.0.0"
nucleo-matcher = "0.3.1"
ratatui = "0.30.2"
rpassword = "7"
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
shellexpand = "3.1.2"
tempfile = "3"
tokio = { version = "1.52.3", features = ["full"] }
toml = "1.1.2"

[package.metadata.deb]
maintainer = "Ayaan Hafeez <m.ayaan.hafeez@gmail.com>"
copyright = "2026, Ayaan Hafeez <m.ayaan.hafeez@gmail.com>"
section = "utils"
priority = "optional"
depends = "$auto"
extended-description = """\
ssht turns every SSH connection into a persistent tmux session. Connect, \
disconnect, reconnect from another machine, and the session -- running jobs \
and all -- is exactly where you left it. Includes a fuzzy-searchable picker \
built from your existing ~/.ssh/config."""
assets = [
    ["target/release/ssht", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/ssht/README.md", "644"],
    ["LICENSE", "usr/share/doc/ssht/LICENSE", "644"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/ssht", dest = "/usr/bin/ssht", mode = "755" },
    { source = "README.md", dest = "/usr/share/doc/ssht/README.md", mode = "644", doc = true },
    { source = "LICENSE", dest = "/usr/share/licenses/ssht/LICENSE", mode = "644", doc = true },
]
